--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>calculator- by birat</title>
-    <link rel="stylesheet" href="style.css"
+    <title>Calculator by Birat</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="calculator">
-      <input id="display" readonly />
-      <div id="keys">
-        <button onclick="appendToDisplay('+')">+</button>
-        <button onclick="appendToDisplay('7')">7</button>
-        <button onclick="appendToDisplay('8')">8</button>
-        <button onclick="appendToDisplay('9')">9</button>
-        <button onclick="appendToDisplay('-')">-</button>
-        <button onclick="appendToDisplay('4')">4</button>
-        <button onclick="appendToDisplay('5')">5</button>
-        <button onclick="appendToDisplay('6')">6</button>
-        <button onclick="appendToDisplay('*')">*</button>
-        <button onclick="appendToDisplay('1')">1</button>
-        <button onclick="appendToDisplay('2')">2</button>
-        <button onclick="appendToDisplay('3')">3</button>
-        <button onclick="appendToDisplay('/')">/</button>
-        <button onclick="appendToDisplay('0')">0</button>
-        <button onclick="appendToDisplay('.')">.</button>
-        <button onclick="appendToDisplay('%')">%</button>
-        <button onclick="clearDisplay()">C</button>
-        <button onclick="calculateDisplay()">=</button>
+    <main id="calculator" role="main">
+      <input id="display" readonly aria-label="Calculator display" />
+      <div id="keys" role="grid">
+        <button onclick="appendToDisplay('+')" aria-label="Add">+</button>
+        <button onclick="appendToDisplay('7')" aria-label="Seven">7</button>
+        <button onclick="appendToDisplay('8')" aria-label="Eight">8</button>
+        <button onclick="appendToDisplay('9')" aria-label="Nine">9</button>
+        <button onclick="appendToDisplay('-')" aria-label="Subtract">-</button>
+        <button onclick="appendToDisplay('4')" aria-label="Four">4</button>
+        <button onclick="appendToDisplay('5')" aria-label="Five">5</button>
+        <button onclick="appendToDisplay('6')" aria-label="Six">6</button>
+        <button onclick="appendToDisplay('*')" aria-label="Multiply">*</button>
+        <button onclick="appendToDisplay('1')" aria-label="One">1</button>
+        <button onclick="appendToDisplay('2')" aria-label="Two">2</button>
+        <button onclick="appendToDisplay('3')" aria-label="Three">3</button>
+        <button onclick="appendToDisplay('/')" aria-label="Divide">/</button>
+        <button onclick="appendToDisplay('0')" aria-label="Zero">0</button>
+        <button onclick="appendToDisplay('.')" aria-label="Decimal point">.</button>
+        <button onclick="appendToDisplay('%')" aria-label="Percentage">%</button>
+        <button onclick="clearDisplay()" aria-label="Clear">C</button>
+        <button onclick="calculateDisplay()" aria-label="Equals">=</button>
       </div>
-    </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
